--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="."
+            android:name=".NASAObject"
             android:label="@string/app_name"
             android:parentActivityName=".MainActivity">
         </activity>
