--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-    >
+    android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -15,9 +15,17 @@
         android:theme="@style/Theme.NASAImages"
         tools:targetApi="31">
         <activity
+            android:name=".ImageDisplay"
+            android:exported="false"
+            android:label="@string/title_activity_image_display"
+            android:theme="@style/Theme.NASAImages.NoActionBar">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,10 +35,7 @@
         <activity
             android:name=".NASAObject"
             android:label="@string/app_name"
-            android:parentActivityName=".MainActivity">
-        </activity>
-
-
+            android:parentActivityName=".MainActivity"></activity>
     </application>
 
 </manifest>
